# hnode2_switch_daemon

./: CMakeLists.txt  README.md
cmake/: FindI2C.cmake
doc/: schduleMatrix.json  seqaddex.json  switchConfig.json
pkg/: hnswitchd.service.in
src/client/: HNSWDPacketClient.cpp  HNSWDPacketClient.h  hnswitchd_client.cpp
src/daemon/: HNDaemonHealth.cpp  HNDaemonHealth.h  HNDaemonLog.cpp  HNDaemonLog.h  HNSWDPacketDaemon.cpp  HNSWDPacketDaemon.h  HNScheduleMatrix.cpp  HNScheduleMatrix.h  HNSwitchDaemon.cpp  HNSwitchDaemon.h  HNSwitchDaemonPrivate.h  HNSwitchManager.cpp  HNSwitchManager.h  HNodeSWDPacket.cpp  SwitchManager.cpp  SwitchManager.h  hnswitchd.cpp
src/include/: HNSWDPacket.h  HNSwitchDaemon.h  HNodeSWDPacket.h
